Fixed Rank width overlapping with padding

--- a/static/css/pages/beatmapset.css
+++ b/static/css/pages/beatmapset.css
@@ -298,7 +298,7 @@ body {
   height: 100%;
   padding: 1rem;
 
-  width: 8rem;
+  min-width: 8rem;
 
   font-size: 2.5em;
 
